src/snapshots/asm_codegen__parser__tests__parse_equal_equal.snap
---
source: src/parser.rs
expression: parser.parse().unwrap()
---
- Expr:
    expr:
      Binary:
        left:
          Literal:
            value:
              Integer: 1
        op:
          type: EqualEqual
          lexeme: "=="
          literal: ~
          line: 1
        right:
          Literal:
            value:
              Integer: 2
